<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_us_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/about_exchangelocator"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="20dp"
            android:text="@string/exchangelocator_offers_a_specialized_solution_combining_real_time_currency_exchange_rate_monitoring_with_a_targeted_location_search_for_currency_exchange_services_the_application_enables_users_to_identify_and_compare_dedicated_currency_exchange_offices_in_their_vicinity_providing_critical_information_on_current_rates_and_available_currencies"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/developed_by_narel_reifman_nronen_berger_nomer_trabulski"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_1_0_0"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>
